# UpdatePlexPlaylists

./: .gitignore  README.md  pyproject.toml
UpdatePlexPlaylists/: UpdatePlexPlaylists.ipynb  plex_helpers.py
tests/: test_plex_helpers.py
